Improve dependency review guide

--- a/docs/exercises/02.secure.the.software.supply.chain/00.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/00.md
@@ -1,46 +1,44 @@
 # :test_tube: Security Checks
 
+<!-- markdownlint-disable MD033 MD046 -->
+
 !!! quote ":octicons-milestone-16: Add Security Checks"
 
     > In this part we will add to the continuous integration workflow the security checks which be run on the Pull Request open event.
 
+!!! note
 
-    !!! note
-        We will continue working on the same branch `feature/tetris-game` and the same file `1.1.continuous.integration.yml`.
+    - We are continuing work on the PR created from branch `feature/tetris-game`.
+    - You should have completed the [base security configuration prerequisite](../../prerequisites.md#configure-base-security).
 
-    ### Step 1. Enable GHAS (GitHub Advanced Security) checks on GitHub Repository
+## Exercise: Implement dependency review as automated security check
 
-    !!! note
-        - You must have admin permissions on the repository to perform this step.
-        - This part is suppose to be done in the prerequisites
-        - Change the indentation settings to use 2 spaces
+:material-numeric-1-circle: Open `.github/workflows/continuous.integration.yml` in the file explorer.
 
-    ### Step 2. Add security checks to the continuous integration workflow
+---
 
-    1. Navigate to `.github/workflows` and open the file `01.1.continuous.integration.yml`.
-    2. Add the following content to the file:
+:material-numeric-2-circle: Add the {== highlighted ==} content into the `.github/workflows/continuous.integration.yml` file:
 
-        !!! example "Security Checks"
+```yaml title=".github/workflows/continuous.integration.yml" linenums="1" hl_lines="67-76"
+--8<-- "reference.implementations/workflows/1.3.continuous.integration.yml"
+```
 
-            ```yaml
-            --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/01.continuous-integration-part-1.yml"
-            ```
+---
 
-        !!! example "Push changes to Github"
+:material-numeric-3-circle: Push your changes to Github
 
-            ``` bash
-            git add .
-            git commit -m "feat: update continuous integration workflow - add security checks step"
-            git push origin feature/tetris-game
-            ```
+```bash
+git add .
+git commit -m "feat: add security checks step"
+git push origin feature/tetris-game
+```
 
-    Navigate to the repository on GitHub and open the pull request.
+:material-numeric-4-circle: Navigate to the repository on GitHub and open the existing pull request to observe the outcome of the newly added check. As the check is currently successful you should not see any remarkable new difference in the checks reporting, yet.
 
-    ## :books: Resources
+## :books: Resources
 
-    - [GitHub Actions](https://docs.github.com/en/actions)
-    - [GitHub Actions - Workflow syntax for GitHub Actions](https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions)
-    - [GitHub Advanced Security](https://docs.github.com/en/get-started/learning-about-github/about-github-advanced-security)
-    - [GitHub Advanced Security - Code scanning](https://docs.github.com/en/code-security/code-scanning/introduction-to-code-scanning/
-    about-code-scanning)
-    - [GitHub Advanced Security - Denpendency Graph](https://docs.github.com/en/code-security/supply-chain-security/understanding-your-software-supply-chain/about-the-dependency-graph)
+- [GitHub Actions](https://docs.github.com/en/actions)
+- [GitHub Actions - Workflow syntax for GitHub Actions](https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions)
+- [GitHub Advanced Security](https://docs.github.com/en/get-started/learning-about-github/about-github-advanced-security)
+- [GitHub Advanced Security - Code scanning](https://docs.github.com/en/code-security/code-scanning/introduction-to-code-scanning/about-code-scanning)
+- [GitHub Advanced Security - Dependency Graph](https://docs.github.com/en/code-security/supply-chain-security/understanding-your-software-supply-chain/about-the-dependency-graph)
