--- a/docs/exercises/01.collaborate/02.md
+++ b/docs/exercises/01.collaborate/02.md
@@ -32,16 +32,16 @@ Refer back to the Codespaces development environment created in the [prerequisit
 
     ```json title=".devcontainer/devcontainer.json" linenums="1" hl_lines="11"
     {
-      "hostRequirements": { /*(1)*/
+      "hostRequirements": {//(1)!
         "cpus": 4,
         "memory": "16gb",
         "storage": "32gb"
       },
       "build": {
-        "dockerfile": "./Dockerfile", /*(2)*/
+        "dockerfile": "./Dockerfile",//(2)!
         "context": ".."
       },
-      "postAttachCommand": "python -m mkdocs serve --clean --dev-addr 127.0.0.1:8080", /*(3)*/
+      "postAttachCommand": "python -m mkdocs serve --clean --dev-addr 127.0.0.1:8080",//(3)!
       "forwardPorts": [
         8080
       ],
@@ -116,35 +116,35 @@ At this fundamentals phase of introduction to DevSecOps, we shall focus our leve
         ~ [Understanding GitHub Actions](https://docs.github.com/en/actions/learn-github-actions/understanding-github-actions)
 
     ```yaml title="Anatomy of a GitHub Workflow"
-    name: Learn GitHub Actions #(1)
+    name: Learn GitHub Actions #(1)!
 
-    run-name: ${{ github.actor }}  is learning GitHub Actions #(2)
+    run-name: ${{ github.actor }}  is learning GitHub Actions #(2)!
 
-    on: [push] #(3)
+    on: [push] #(3)!
 
-    permissions: #(12)
+    permissions: #(12)!
         contents: read
 
-    env: #(13)
+    env: #(13)!
         LEARNER_NAME: Igwe
 
-    jobs: #(4)
+    jobs: #(4)!
 
-        check-bats-version: #(5)
+        check-bats-version: #(5)!
 
-            runs-on: ubuntu-latest #(6)
+            runs-on: ubuntu-latest #(6)!
 
-            steps: #(7)
+            steps: #(7)!
 
-                - uses: actions/checkout@v4 #(8)
+                - uses: actions/checkout@v4 #(8)!
 
-                - uses: actions/setup-node@v3 #(9)
+                - uses: actions/setup-node@v3 #(9)!
                   with:
                       node-version: '14'
 
-                - run: npm install -g bats #(10)
+                - run: npm install -g bats #(10)!
 
-                - run: bats -v #(11)
+                - run: bats -v #(11)!
 
                 - run: echo "Hey ${LEARNER_NAME}, you're good... You've mastered GitHub Actions\!"
     ```
@@ -366,11 +366,11 @@ Before publishing our new changes, we will implement and execute a functional te
 
     ```shell
     # Install Node.js
-    nvm install --lts #(1)
+    nvm install --lts #(1)!
     # Install packages required for running the functional UI test
     npm install
     # Install the browser(s) against which the functional UI test should run
-    npx playwright install --with-deps chromium #(2)
+    npx playwright install --with-deps chromium #(2)!
     ```
 
        1. :octicons-info-16: A codespace environment can be customized as needed. In this case, we customized the running session by installing the latest version of `Node.js`.
