Improve dependency review guide

--- a/docs/exercises/02.secure.the.software.supply.chain/00.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/00.md
@@ -1,31 +1,69 @@
-# :test_tube: Security Checks
+# :test_tube: Dependency Review
 
 <!-- markdownlint-disable MD033 MD046 -->
 
 !!! quote ":octicons-milestone-16: Add Security Checks"
 
-    > In this part we will add to the continuous integration workflow the security checks which be run on the Pull Request open event.
+    > Dependency review helps you understand dependency changes and the security impact of these changes at every pull request. It provides an easily understandable visualization of dependency changes with a rich diff on the "Files Changed" tab of a pull request. Dependency review informs you of:
+
+    > - Which dependencies were added, removed, or updated, along with the release dates.
+    > - How many projects use these components.
+    > - Vulnerability data for these dependencies.
 
 !!! note
 
     - We are continuing work on the PR created from branch `feature/tetris-game`.
     - You should have completed the [base security configuration prerequisite](../../prerequisites.md#configure-base-security).
 
-## Exercise: Implement dependency review as automated security check
+## Exercise: Automate Enforcement of Dependency Review
 
-:material-numeric-1-circle: Open `.github/workflows/continuous.integration.yml` in the file explorer.
+### **:material-numeric-1-circle: Understand the Dependency Review Configurations**
+
+```yaml
+fail-on-severity: moderate #(1)!
+
+comment-summary-in-pr: always #(2)!
+
+allow-licenses: #(3)!
+  - MIT
+  - GPL-3.0
+  - BSD-3-Clause
+
+deny-licenses: #(4)!
+  - LGPL-2.0
+  - BSD-2-Clause
+
+allow-ghsas: #(5)!
+  - GHSA-abcd-1234-5679
+  - GHSA-efgh-1234-5679
+
+fail-on-scopes: #(6)!
+  - development
+  - runtime
+  - unknown
+```
+
+1. Possible values: "critical", "high", "moderate", "low"
+2. Post summary as a comment to respective pull request
+3. Only allow the listed licenses (optional). Possible values: Any `spdx_id` value(s) from https://docs.github.com/en/rest/licenses
+4. Block the pull request on these licenses (optional). Possible values: Any  `spdx_id` value(s) from https://docs.github.com/en/rest/licenses
+
+    :warning: You can only include one of either of these two options: `allow-licenses` and `deny-licenses`.
+
+5. Skip these GitHub Advisory Database IDs during detection (optional). Possible values: Any valid GitHub Advisory Database ID from https://github.com/advisories
+6. Block pull requests that introduce vulnerabilities in the scopes that match this list (optional). Possible values: "development", "runtime", "unknown"
 
 ---
 
-:material-numeric-2-circle: Add the {== highlighted ==} content into the `.github/workflows/continuous.integration.yml` file:
+### **:material-numeric-2-circle: Implement Dependency Review Check**
+
+Open the `.github/workflows/continuous.integration.yml` file in the editor and add the {== highlighted ==} content as follows:
 
 ```yaml title=".github/workflows/continuous.integration.yml" linenums="1" hl_lines="67-76"
 --8<-- "reference.implementations/workflows/1.3.continuous.integration.yml"
 ```
 
----
-
-:material-numeric-3-circle: Push your changes to Github
+Commit and push your changes to apply the check on the existing pull request.
 
 ```bash
 git add .
@@ -33,12 +71,9 @@ git commit -m "feat: add security checks step"
 git push origin feature/tetris-game
 ```
 
-:material-numeric-4-circle: Navigate to the repository on GitHub and open the existing pull request to observe the outcome of the newly added check. As the check is currently successful you should not see any remarkable new difference in the checks reporting, yet.
+When you navigate to the repository on GitHub and open the existing pull request, you can confirm that the check was executed. As there are no compliance violations currently in the PR, the check is successful.
 
 ## :books: Resources
 
-- [GitHub Actions](https://docs.github.com/en/actions)
-- [GitHub Actions - Workflow syntax for GitHub Actions](https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions)
-- [GitHub Advanced Security](https://docs.github.com/en/get-started/learning-about-github/about-github-advanced-security)
-- [GitHub Advanced Security - Code scanning](https://docs.github.com/en/code-security/code-scanning/introduction-to-code-scanning/about-code-scanning)
+- [Understanding your software supply chain](https://docs.github.com/en/code-security/supply-chain-security/understanding-your-software-supply-chain)
 - [GitHub Advanced Security - Dependency Graph](https://docs.github.com/en/code-security/supply-chain-security/understanding-your-software-supply-chain/about-the-dependency-graph)
