Improvement on collaboration

--- a/docs/exercises/01.collaborate/02.md
+++ b/docs/exercises/01.collaborate/02.md
@@ -99,7 +99,7 @@ Refer back to the Codespaces development environment created in the [prerequisit
 
 ### **:material-numeric-2-circle: Implement Automated Checks**
 
-GitHub as a platform, is event-driven. Beyond the ordinary, you can generally automate your actual business processes by modelling activities to produce changes on GitHub, thus triggering execution of certain automated tasks depending on the nature of a change.
+GitHub as a platform, is event-driven. Beyond the ordinary, you can generally automate your actual business processes by modelling activities to produce changes on GitHub, thus triggering execution of certain automated tasks depending on the nature of a change. If you already familiar with the concept of [GitOps](https://www.gitops.tech/), think of how the idea can be extended beyond the scopes of provisioning infrastructure and implementing continuos deployment.
 
 At this fundamentals phase of introduction to DevSecOps, we shall focus our leverage of GitHub's powerful event system to drive {== **continuous integration** ==} checks and tests with GitHub Workflows.
 
@@ -151,7 +151,7 @@ At this fundamentals phase of introduction to DevSecOps, we shall focus our leve
 
     1. `Optional` - The name of the workflow as it will appear in the "Actions" tab of the GitHub repository. If this field is omitted, the name of the workflow file will be used instead.
     2. `Optional` - The name for workflow runs generated from the workflow, which will appear in the list of workflow runs on your repository's "Actions" tab. This example uses an expression with the `github` context to display the username of the actor that triggered the workflow run. For more information, see "[Workflow syntax for GitHub Actions](https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#run-name)."
-    3. Specifies the trigger for this workflow. This example uses the `push` event, so a workflow run is triggered every time someone pushes a change to the repository or merges a pull request.  This is triggered by a push to every branch; for examples of syntax that runs only on pushes to specific branches, paths, or tags, see "[Workflow syntax for GitHub Actions](https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#onpushpull_requestpull_request_targetpathspaths-ignore)."
+    3. Specifies the trigger for this workflow. This example uses the `push` event, so a workflow run is triggered every time someone pushes a change to the repository or merges a pull request.  This is triggered by a push to every branch; for examples of syntax that runs only on pushes to specific branches, paths, or tags, see "[Workflow syntax for GitHub Actions](https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#onpushpull_requestpull_request_targetpathspaths-ignore)" and {== "[Events that trigger workflows](https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows)" ==}.
     4. Groups together all the jobs that run in the `learn-github-actions` workflow.
     5. Defines a job named `check-bats-version`. The child keys will define properties of the job.
     6. Configures the job to run on the latest version of an Ubuntu Linux runner. This means that the job will execute on a fresh virtual machine hosted by GitHub. For syntax examples using other runners, see "[Workflow syntax for GitHub Actions](https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on)"
@@ -275,11 +275,7 @@ At this fundamentals phase of introduction to DevSecOps, we shall focus our leve
 
         ```bash
         git checkout -b feature/tetris-game
-        git add .github/workflows/continuous.integration.yml
-        # If you are doing the workshop with an enterprise account
-        # and have opted to implement merge queue then you should also
-        # add the merge queue workflow by uncommenting the next line.
-        # git add .github/workflows/1.2.continuous.integration.yml
+        git add .
         git commit -m "Implement continuous integration"
         git push -u origin feature/tetris-game
         ```
@@ -395,7 +391,7 @@ Before publishing our new changes, we will implement and execute a functional te
 
     ```bash
     # Add newly implemented and modified files
-    git add docs/tetris.game docs/.tetris.game mkdocs.yml tests/tetris.spec.js
+    git add .
     git commit -m "Integrate Tetris game implementation"
     git push origin
     ```
@@ -404,5 +400,6 @@ Before publishing our new changes, we will implement and execute a functional te
 
 - [Introduction to dev containers](https://docs.github.com/en/codespaces/setting-up-your-project-for-codespaces/adding-a-dev-container-configuration/introduction-to-dev-containers)
 - [Workflow syntax for GitHub Actions](https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idenv)
+- [Events that trigger workflows](https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows)
 - [Finding and customizing actions](https://docs.github.com/en/actions/learn-github-actions/finding-and-customizing-actions)
 - [Code scanning](https://docs.github.com/en/code-security/code-scanning)
