Improve step structure on dependency review

--- a/docs/exercises/02.secure.the.software.supply.chain/00.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/00.md
@@ -10,11 +10,6 @@
     > - How many projects use these components.
     > - Vulnerability data for these dependencies.
 
-!!! note
-
-    - We are continuing work on the PR created from branch `feature/tetris-game`.
-    - You should have completed the [base security configuration prerequisite](../../prerequisites.md#configure-base-security).
-
 ## Exercise: Automate Enforcement of Dependency Review
 
 ### **:material-numeric-1-circle: Understand the Dependency Review Configurations**
@@ -63,7 +58,9 @@ Open the `.github/workflows/continuous.integration.yml` file in the editor and a
 --8<-- "reference.implementations/workflows/1.3.continuous.integration.yml"
 ```
 
-Commit and push your changes to apply the check on the existing pull request.
+### **:material-numeric-2-circle: Commit and publish your changes**
+
+Pushing your changes will apply the check on the existing pull request.
 
 ```bash
 git add .
