--- a/docs/exercises/02.secure.the.software.supply.chain/01.md
+++ b/docs/exercises/02.secure.the.software.supply.chain/01.md
@@ -1,42 +1,65 @@
-# :test_tube: Continuous Delivery
+# :test_tube: Versioning
 
-!!! quote ":octicons-milestone-16: Continuous Delivery"
+<!-- markdownlint-disable MD046 -->
 
-    > In this part we will get our application ready for deployment and then deploy it to GitHub Pages.
+!!! quote ":octicons-milestone-16: Motivation for Versions"
 
-    !!! note
-        This step will not be run until we merge the pull request first
+    > A pull request represents a single aggregation of multiple significant changes (i.e. commits). When collaborating at scale in a large team or project, pull requests targeting the default (production) branch can be further buffered through a merge queue for further validation. In either cases, it is imperative to keep track of the aggregated changes introduced into the default branch which serves as the basic source of production releases.
+    >
+    > Some versions may eventually be released whereas others are not. Moreover, a released version may be rolled back to an earlier release as business decisions evolve.
 
-    ### 1. Create a GitHub Action to build and publish the application
+## Exercise: Version Changes Added to the Main Branch
 
-    !!! note
-        We will keep working on the same branch `feature/tetris-game`.
+Semantic Versioning, `semver` is a scheme that conveys meaning about the underlying code and what has been modified from one version to the next.
 
-    #### Step 1: Get the last version number
+`semver` version `2.0.0` is officially summarized as follows.
 
-    1. Navigate to `.github/workflows` and create a new file called `2.1.continuous.delivery.yml`.
-    2. Use this worklow to:
-        1. Get the last version number
-        2. Get the next version number
-        3. Create a tag for the next version for release
-    3. Add the following content to the file:
+> Given a version number MAJOR.MINOR.PATCH, increment the:
+>
+> 1. MAJOR version when you make incompatible API changes
+> 1. MINOR version when you add functionality in a backward compatible manner
+> 1. PATCH version when you make backward compatible bug fixes
+>
+> Additional labels for pre-release and build metadata are available as extensions to the MAJOR.MINOR.PATCH format.
 
-        !!! example "Continuous Delivery Workflow"
+At this fundamentals phase of DevSecOps implementation, we will apply the `semver` scheme and automate patch increment. There are conventions that can be adopted to equally automate increment in `MAJOR` and `MINOR` versions, but for simplicity our intended implementation assumes the understanding that `MAJOR` and `MINOR` version bumps will be manually initiated.
 
-            ```yaml
-            --8<-- "docs/exercises/02.secure.the.software.supply.chain/workflows/02.continuous-delivery.yml"
-            ```
+### **:material-numeric-1-circle: Implement `PATCH` Versioning**
 
-        !!! example "Push changes to Github"
+In the file explorer, create a new workflow `.github/workflows/continuous.delivery.yml` as follows.
 
-            ```bash
-            git add .
-            git commit -m "feat: update continuous integration workflow - add continuous-Delivery"
-            git push origin feature/tetris-game
-            ```
+```yaml title=".github/workflows/continuous.delivery.yml" linenums="1" hl_lines="4-6 25-31 33-47 49-60"
+--8<-- "reference.implementations/workflows/2.1.continuous.delivery.yml"
+```
 
-    ## :books: Resources
+#### Analysis
 
-    - [GitHub Codespaces](https://docs.github.com/en/codespaces)
-    - [GitHub Actions](https://docs.github.com/en/actions)
-    - [GitHub Actions - Workflow syntax for GitHub Actions](https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions)
+- **Lines `4 - 6`**
+
+    We are introduced to a new event that encapsulates the activity of pushing to particular branches, specifically the `main` branch alone in this implementation.
+
+- **Lines `25 - 31`**
+
+    The step `Get last version number` computes the last version and writes it to the step output named `last_version`.
+
+- **Lines `33 - 47`**
+
+    The step `Get new version number` uses reads the output from the previous step by the expression `${{ steps.get_last_version.outputs.last_version }}`, and use it to compute the patch increment.
+
+- **Lines `49 - 60`**
+
+    The step `Create tag for the new version` creates a new `git` tag for release.
+
+### **:material-numeric-2-circle: Commit and publish your changes**
+
+```bash
+git add .
+git commit -m "feat: update continuous integration workflow - add continuous-Delivery"
+git push origin feature/tetris-game
+```
+
+## :books: Resources
+
+- [GitHub Codespaces](https://docs.github.com/en/codespaces)
+- [GitHub Actions](https://docs.github.com/en/actions)
+- [GitHub Actions - Workflow syntax for GitHub Actions](https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions)
